tests/ui/imports/import-alias-issue-121168.edition2015.stderr
error[E0412]: cannot find type `Foo` in this scope
  --> $DIR/import-alias-issue-121168.rs:11:12
   |
LL |     let _: Foo<i32> = todo!();
   |            ^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use nice_crate_name::Foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
